--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -11,10 +11,10 @@
 
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul class="navitagion-items" fxLayout fxLayoutGap="15px">
-            <li><a [routerLink]="['/signup']">Signup</a></li>
-            <li><a [routerLink]="['/login']">Login</a></li>
-            <li><a [routerLink]="['/training']">Training</a></li>
-            <li><a [routerLink]="['/']">Logout</a></li>
+            <li *ngIf="!isAuth"><a [routerLink]="['/signup']">Signup</a></li>
+            <li *ngIf="!isAuth"><a [routerLink]="['/login']">Login</a></li>
+            <li *ngIf="isAuth"><a [routerLink]="['/training']">Training</a></li>
+            <li *ngIf="isAuth"><a [routerLink]="['/']">Logout</a></li>
         </ul>
     </div>
 </mat-toolbar>
