--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -13,7 +13,7 @@
         <span class="nav-caption">Training</span>
     </a>
 
-    <a *ngIf="isAuth" mat-list-item (click)="onClose()">        
+    <a *ngIf="isAuth" mat-list-item (click)="onLogout()">        
         <mat-icon color="primary">reply</mat-icon>
         <span class="nav-caption">Logout</span>
     </a>
