Add training service

--- a/src/app/training/components/new-training/new-training.component.html
+++ b/src/app/training/components/new-training/new-training.component.html
@@ -1,20 +1,23 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
-    <mat-card fxFlex.xs="100%" fxFlex="400px">
-        <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
+    <form [formGroup]="newTrainingForm" (ngSubmit)="onStartingTraining()">
+        <mat-card fxFlex.xs="100%" fxFlex="400px">
+            <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
 
-        <mat-card-content fxLayoutAlign="center">
+            <mat-card-content fxLayoutAlign="center">
+                <mat-form-field appearance="legacy">
+                    <mat-select placeholder="Select type of training" formControlName="exercise">
+                        <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+                            {{ exercise.name }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>Select an exercise!</mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="legacy">
-                <mat-select placeholder="Select type of training">
-                    <mat-option value="1">1</mat-option>
-                    <mat-option value="2">2</mat-option>
-                    <mat-option value="3">3</mat-option>
-                </mat-select>
-            </mat-form-field>
-
-        </mat-card-content>
-        <mat-card-actions fxLayoutAlign="center">
-            <button mat-raised-button color="primary" type="submit" (click)="onStartingTraining()">Start</button>
-        </mat-card-actions>        
-    </mat-card>
+            </mat-card-content>
+            <mat-card-actions fxLayoutAlign="center">
+                <button mat-raised-button color="primary" type="submit"
+                    [disabled]="newTrainingForm.invalid">Start</button>
+            </mat-card-actions>
+        </mat-card>
+    </form>
 </section>
