--- a/src/app/training/components/current-training/current-training.component.html
+++ b/src/app/training/components/current-training/current-training.component.html
@@ -4,5 +4,5 @@
     <h1>{{progress}}%</h1>
     <p>Keep on going, you can do it!</p>
 
-    <button mat-raised-button color="accent" (click)="onStop()">Stop</button>
+    <button  mat-stroked-button color="primary" (click)="onStop()">Stop</button>
 </section>
