--- a/src/app/training/components/past-training/past-training.component.html
+++ b/src/app/training/components/past-training/past-training.component.html
@@ -6,45 +6,47 @@
             <mat-icon matSuffix color="primary">search</mat-icon>
         </mat-form-field>
     </div>
-    <table width="100%" mat-table [dataSource]="dataSource" matSort>
-        <!-- Date Column -->
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-            <td mat-cell *matCellDef="let element">{{element.date | date}}</td>
-        </ng-container>
+    <div class="mat-elevation-z8 past-training">
+        <table class="past-training__table" mat-table [dataSource]="dataSource" matSort>
+            <!-- Date Column -->
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td mat-cell *matCellDef="let element">{{element.date.toDate() | date }}</td>
+            </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            </ng-container>
 
-        <!-- Calories Column -->
-        <ng-container matColumnDef="calories">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Calories</th>
-            <td mat-cell *matCellDef="let element">{{element.calories | number}}</td>
-        </ng-container>
+            <!-- Calories Column -->
+            <ng-container matColumnDef="calories">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Calories</th>
+                <td mat-cell *matCellDef="let element">{{element.calories | number}}</td>
+            </ng-container>
 
-        <!-- Duration Column -->
-        <ng-container matColumnDef="duration">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration</th>
-            <td mat-cell *matCellDef="let element">{{element.duration | number }}</td>
-        </ng-container>
+            <!-- Duration Column -->
+            <ng-container matColumnDef="duration">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration</th>
+                <td mat-cell *matCellDef="let element">{{element.duration | number }}</td>
+            </ng-container>
 
-        <!-- State Column -->
-        <ng-container matColumnDef="state">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>State</th>
-            <td mat-cell *matCellDef="let element">{{element.state}}</td>
-        </ng-container>
+            <!-- State Column -->
+            <ng-container matColumnDef="state">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>State</th>
+                <td mat-cell *matCellDef="let element">{{element.state}}</td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{filter.value}}"</td>
-        </tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{filter.value}}"</td>
+            </tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+    </div>
 
 </mat-card>
