--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -35,7 +35,9 @@
         </div>
 
         <div class="form__actions">
-            <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+            <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
         </div>
+
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
     </form>
 </section>
