--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,12 +1,15 @@
 <mat-toolbar color="primary">
-    <div fxHide.gt-xs>
+    <div fxHide.gt-xs class="menu">
         <button mat-icon-button (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
         </button>
     </div>
 
     <div>
-        <a [routerLink]="['/']">LOGO</a>
+        <a [routerLink]="['/']" class="logo">            
+            <mat-icon>shutter_speed</mat-icon>
+            <span>NG Fitness Tracker</span>            
+        </a>
     </div>
 
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
