--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -1,7 +1,13 @@
-.navitagion-items { margin: 0; padding: 0; list-style: none; }
-
-a { text-decoration: none; color: white; 
-    &:active, &:hover { color: lightgray; }
+.navitagion-items { margin: 0; padding: 0; list-style: none; 
+    a { text-decoration: none; color: white; 
+        &:active, &:hover { color: lightgray; }
+    }
 }
 
-.nav-caption { display: inline-block; padding-left: 6px; }
+.menu { padding-right: 15px; }
+
+.logo { display: flex; align-items: center; padding: 5px 10px; color: #673ab7; background-color: white; font-size: 1.5rem; text-decoration: none; border-radius: 5px; border: 1px solid #673ab7; transform: scale(0.95); transition: .3s; 
+    &:hover { transform: scale(1); transition: .3s; }
+
+    span { font-size: 0.9rem; font-weight: bold; padding-left: 10px; }
+}
