--- a/src/app/training/components/new-training/new-training.component.html
+++ b/src/app/training/components/new-training/new-training.component.html
@@ -3,8 +3,8 @@
         <mat-card fxFlex.xs="100%" fxFlex="400px">
             <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
 
-            <mat-card-content fxLayoutAlign="center">
-                <mat-form-field *ngIf="!isLoading && exercises" appearance="legacy">
+            <mat-card-content *ngIf="!isLoading" fxLayoutAlign="center">
+                <mat-form-field appearance="legacy">
                     <mat-select placeholder="Select type of training" formControlName="exercise">
                         <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
                             {{ exercise.name }}
@@ -12,8 +12,10 @@
                     </mat-select>
                     <mat-error>Select an exercise!</mat-error>
                 </mat-form-field>
+            </mat-card-content>
 
-                <mat-spinner *ngIf="isLoading"></mat-spinner>
+            <mat-card-content *ngIf="isLoading" fxLayoutAlign="center">
+                <mat-spinner></mat-spinner>
             </mat-card-content>
 
             <mat-card-actions *ngIf="!isLoading" fxLayoutAlign="center">
@@ -21,7 +23,6 @@
                     [disabled]="newTrainingForm.invalid">Start</button>
                 <button *ngIf="!exercises" mat-raised-button color="primary" type="button"
                     (click)="fecthExercises()">Fecth Again</button>
-
             </mat-card-actions>
 
         </mat-card>
