--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -22,9 +22,10 @@
         </div>
 
         <div class="form__actions">
-            <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+            <button *ngIf="!(isLoading$ | async)" type="submit" mat-raised-button color="primary"
+                [disabled]="f.invalid">Submit</button>
         </div>
 
-        <mat-spinner *ngIf="isLoading"></mat-spinner>
+        <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
     </form>
 </section>
