--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -6,18 +6,18 @@
     </div>
 
     <div>
-        <a [routerLink]="['/']" class="logo">            
+        <a [routerLink]="['/']" class="logo">
             <mat-icon>shutter_speed</mat-icon>
-            <span>NG Fitness Tracker</span>            
+            <span>NG Fitness Tracker</span>
         </a>
     </div>
 
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul class="navitagion-items" fxLayout fxLayoutGap="15px">
-            <li *ngIf="!isAuth"><a [routerLink]="['/signup']">Signup</a></li>
-            <li *ngIf="!isAuth"><a [routerLink]="['/login']">Login</a></li>
-            <li *ngIf="isAuth"><a [routerLink]="['/training']">Training</a></li>
-            <li *ngIf="isAuth"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+            <li *ngIf="!(isAuth$ | async)"><a [routerLink]="['/signup']">Signup</a></li>
+            <li *ngIf="!(isAuth$ | async)"><a [routerLink]="['/login']">Login</a></li>
+            <li *ngIf="isAuth$ | async"><a [routerLink]="['/training']">Training</a></li>
+            <li *ngIf="isAuth$ | async"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
         </ul>
     </div>
 </mat-toolbar>
