--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -4,21 +4,21 @@
 </a>
 <mat-nav-list>
 
-    <a *ngIf="!isAuth" mat-list-item [routerLink]="['/signup']" (click)="onClose()">
+    <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['/signup']" (click)="onClose()">
         <mat-icon color="primary">face</mat-icon>
         <span class="nav-caption">Signup</span>
     </a>
-    <a *ngIf="!isAuth" mat-list-item [routerLink]="['/login']" (click)="onClose()">
+    <a *ngIf="!(isAuth$ | async)" mat-list-item [routerLink]="['/login']" (click)="onClose()">
         <mat-icon color="primary">login</mat-icon>
         <span class="nav-caption">Login</span>
     </a>
 
-    <a *ngIf="isAuth" mat-list-item [routerLink]="['/training']" (click)="onClose()">
+    <a *ngIf="isAuth$ | async" mat-list-item [routerLink]="['/training']" (click)="onClose()">
         <mat-icon color="primary">fitness_center</mat-icon>
         <span class="nav-caption">Training</span>
     </a>
 
-    <a *ngIf="isAuth" mat-list-item (click)="onLogout()">        
+    <a *ngIf="isAuth$ | async" mat-list-item (click)="onLogout()">        
         <mat-icon color="primary">reply</mat-icon>
         <span class="nav-caption">Logout</span>
     </a>
