--- a/src/app/training/components/new-training/new-training.component.html
+++ b/src/app/training/components/new-training/new-training.component.html
@@ -3,10 +3,10 @@
         <mat-card fxFlex.xs="100%" fxFlex="400px">
             <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
 
-            <mat-card-content *ngIf="!isLoading" fxLayoutAlign="center">
+            <mat-card-content *ngIf="[!(isLoading$ | async) && (exercises$ | async)]" fxLayoutAlign="center">
                 <mat-form-field appearance="legacy">
                     <mat-select placeholder="Select type of training" formControlName="exercise">
-                        <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+                        <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
                             {{ exercise.name }}
                         </mat-option>
                     </mat-select>
@@ -14,14 +14,14 @@
                 </mat-form-field>
             </mat-card-content>
 
-            <mat-card-content *ngIf="isLoading" fxLayoutAlign="center">
+            <mat-card-content *ngIf="isLoading$ | async" fxLayoutAlign="center">
                 <mat-spinner></mat-spinner>
             </mat-card-content>
 
-            <mat-card-actions *ngIf="!isLoading" fxLayoutAlign="center">
-                <button *ngIf="exercises" mat-raised-button color="primary" type="submit"
+            <mat-card-actions *ngIf="!(isLoading$ | async)" fxLayoutAlign="center">
+                <button *ngIf="exercises$ | async" mat-raised-button color="primary" type="submit"
                     [disabled]="newTrainingForm.invalid">Start</button>
-                <button *ngIf="!exercises" mat-raised-button color="primary" type="button"
+                <button *ngIf="!(exercises$ | async)" mat-raised-button color="primary" type="button"
                     (click)="fecthExercises()">Fecth Again</button>
             </mat-card-actions>
 
