--- a/src/app/auth/components/signup/signup.component.scss
+++ b/src/app/auth/components/signup/signup.component.scss
@@ -1,6 +1,6 @@
 .form {
     &__item { width: 300px; padding-top: 20px;
-        &-picker { color: #673ab7;  font-size: 1.2rem; }
+        &-picker { color: #009688;  font-size: 1.2rem; }
         &-error { font-size: 0.7rem; }
     }
 
