--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -6,7 +6,7 @@
 
 .menu { padding-right: 15px; }
 
-.logo { display: flex; align-items: center; padding: 5px 10px; color: #673ab7; background-color: white; font-size: 1.5rem; text-decoration: none; border-radius: 5px; border: 1px solid #673ab7; transform: scale(0.95); transition: .3s; 
+.logo { display: flex; align-items: center; padding: 5px 10px; color: #009688; background-color: white; font-size: 1.5rem; text-decoration: none; border-radius: 5px; border: 1px solid #009688; transform: scale(0.95); transition: .3s; 
     &:hover { transform: scale(1); transition: .3s; }
 
     span { font-size: 0.9rem; font-weight: bold; padding-left: 10px; }
