--- a/src/app/training/components/past-training/past-training.component.scss
+++ b/src/app/training/components/past-training/past-training.component.scss
@@ -1,3 +1,6 @@
 .past-training { position: relative; overflow: auto;
-    &__table { width: 100%; }
+    &__table { width: 100%; 
+        .mat-header-cell { background-color: #009688; color: white; text-transform: uppercase; font-size: 0.9rem; border: 1px solid #009688; }
+        ::ng-deep .mat-sort-header-arrow { color:  white; } 
+    }
 }
